@@ -2,6 +2,7 @@ ChangeLog
 Error.ppd
 example
 lib/Error.pm
+lib/Error/Simple.pm
 Makefile.PL
 MANIFEST
 META.yml                                 Module meta-data (added by MakeMaker)
@@ -9,3 +10,4 @@ README
 t/01throw.t
 t/02order.t
 t/03throw-non-Error.t
+t/04use-base-Error-Simple.t
